# agentsight

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  wrangler.jsonc
.github/workflows/: ci.yml  deploy-demo.yml  deploy-website.yml  sync-eunomia-docs.yml
agent-session/: Cargo.toml
agent-session/src/: lib.rs  parser.rs  types.rs
agentpprof/: Cargo.toml  README.md
agentpprof/src/: main.rs  profile.rs  session.rs  tagger.rs
bpf/: Makefile  container_info.h  process.bpf.c  process.c  process.h  process_filter.h  process_utils.h  sslsniff.c  stdiocap.bpf.c  stdiocap.c  test_process_utils.c
bpf/process_ext/: bpf_common.h  bpf_cow.h  bpf_fs.h  bpf_mem.h  bpf_net.h  bpf_signals.h  bpf_state.h  bpf_write.h  map_flush.h  mem_info.h  resource_sampler.h  types.h  userspace.h
bpf/tests/: test_integration.py  test_process_ext_map_flush.c  test_process_ext_mem_info.c  test_process_ext_types.c  test_process_runtime.py  test_stdiocap_runtime.py
bpf/tests/bpf/: libbpf.h
collector/: Cargo.toml  README.zh-CN.md
collector/adapters/sql/anthropic/: project_token_usage.sql
collector/adapters/sql/claude-code/: project_cli_output_tokens.sql  project_sessions.sql  project_telemetry_tokens.sql  project_tool_calls.sql
collector/adapters/sql/gemini-cli/: project_cli_output_tokens.sql  project_sessions.sql  project_stdio_tokens.sql
collector/adapters/sql/openclaw/: project_sessions.sql
collector/src/: binary_extractor.rs  binary_resolver.rs  cli_db.rs  cli_discover.rs  cli_output.rs  cmd_debug.rs  cmd_exec.rs  cmd_perf.rs  cmd_perf_live.rs  cmd_trace.rs  event.rs  json.rs  local_sessions.rs  main.rs  model.rs  procfs.rs  session.rs  text.rs
collector/src/analyzers/: filter_base.rs  http_filter.rs  http_parser.rs  mod.rs  mod_tests.rs  protocol_events.rs  sse_processor.rs  sse_processor_tests.rs  ssl_filter.rs
collector/src/cmd_perf/: live.rs
collector/src/framework/: binary_extractor.rs  mod.rs
collector/src/framework/adapters/: mod.rs  sql_adapter.rs
collector/src/framework/analyzers/: LOG_ROTATION_DESIGN.md  auth_header_remover.rs  common.rs  event.rs  file_logger.rs  filter_base.rs  http_filter.rs  http_parser.rs  materializing.rs  mod.rs  mod_tests.rs  otel_exporter.rs  output.rs  sse_processor.rs  sse_processor_tests.rs  ssl_filter.rs  timestamp_normalizer.rs
collector/src/framework/capture/: cli_output.rs  mod.rs
collector/src/framework/core/: events.rs  mod.rs  timestamp.rs
collector/src/framework/runners/: agent.rs  common.rs  fake.rs  mod.rs  process.rs  ssl.rs  stdio.rs  system.rs
collector/src/framework/semantic/: event.rs  llm.rs  mod.rs
collector/src/framework/storage/: analyzer.rs  mod.rs  sqlite.rs
collector/src/output/: format.rs  tui.rs
collector/src/runners/: agent.rs  common.rs  fake.rs  mod.rs  process.rs  ssl.rs
collector/src/semantic/: canonical.rs  mod.rs
collector/src/server/: assets.rs  mod.rs  web.rs
collector/src/sinks/: file_logger.rs  mod.rs  otel.rs  sqlite.rs
collector/src/sources/: agent_native.rs  mod.rs  session.rs  session_db.rs  sqlite.rs
collector/src/stores/: mod.rs  sqlite.rs
collector/src/view/: live_top.rs  mod.rs  projection.rs  projector.rs  top.rs  types.rs
collector/tests/: export_snapshot_test.rs  real_cli_smoke_test.rs  system_runner_test.rs
docs/: agentpprof.md  agents.md  build.md  development.md  development.zh-CN.md  docker.md  otel.md  usage.md  usage.zh-CN.md  vis.md
docs/design/: PLAN_process_tracer_extension.md  academic-positioning-discussion.md  materialized-view-architecture.md  memory-monitoring.md  product-scope-agent-native.md  view-session-process-model.md  why.md
docs/design/archive/: agents-usage-smoke-2026-06-02.md
docs/design/changelog/: CHANGELOG_TIMESTAMP_FIX.md  FILE_OPS_FILTERING_DESIGN.md  FRONTEND_EMBEDDING.md  HTTP_FILTER_METRICS.md  JSON_STRUCT_ALIGNMENT.md  REMOVED_REDUNDANT_FIELDS.md  SSL_FILTER_ESCAPE_SEQUENCES_FIX.md  SSL_FILTER_IMPLEMENTATION.md  analysis.md
docs/design/collector/: HTTP_FILTER.md  README.md
docs/design/market/: 00-market-map-and-whitespace.md  01-competitive-landscape.md  02-user-scenarios-and-icp.md  03-agent-security-and-governance.md  04-mcp-skill-plugin-verification.md  05-open-source-devtools-and-go-to-market.md  06-user-pain-academic-and-ai-usage.md  07-academic-data-collection-pain.md  README.md  blog-agent-observability-wrong-object.md
docs/design/production-observability/: README.md  REFACTOR_PLAN.md  TESTING.md  TODO.md
docs/design/vis/: README.md  agent-run-map.md  agent-workspace-map.md  causal-timeline.md  intent-to-effect-flame-graph.md  multi-agent-causal-map.md  run-impact-map.md  ux.md
docs/design/visexp/: README.md  agent-observability-landscape.md  agentpprof-backend-architecture.md  semantic-operation-profiling.md
docs/experiment/: claude-code-analysis.md  monitor-cpu.sh  monitor-memory.sh  openclaw.md
docs/experiment/case-study/: README.md
docs/experiment/mcp-test/: README.md  fixture_note.txt
docs/experiment/proxy/: .gitignore  README.md  TEST_RESULTS.md
docs/experiment/proxy/mitm-proxy/: Cargo.toml  README.md
docs/experiment/proxy/mitm-proxy/src/: main.rs
docs/experiment/proxy/reverse-proxy/: Cargo.toml  README.md
docs/experiment/proxy/reverse-proxy/src/: main.rs
docs/flamegraph/: README.md
docs/flamegraph-example/: agentsight-files.folded  agentsight-network.folded  agentsight-time.folded  agentsight-tokens.folded  agentsight.sh
docs/flamegraph/examples/: bpf-benchmark-files.folded  (+9 more)
docs/mcp-test/: test_mcp_cli.py  test_mcp_server.py
docs/visexp/: CLAIMS.md  DESIGN.md  EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md  README.md  evaluate_artifacts.py  score_user_task_results.py  semantic_tag_flamegraph.py  test_semantic_tag_flamegraph.py  user_task_benchmark.py  verify_artifacts.py
frontend/: .gitignore  next.config.js  tsconfig.tsbuildinfo
frontend/scripts/: prepare-sample.mjs
skills-example/agentpprof-flamegraph/: SKILL.md
skills/agentpprof-flamegraph/: SKILL.md
(+67 files in other folders)
