[package]
name = "agent-session"
version = "0.4.4"
edition = "2024"
rust-version = "1.87"
description = "Portable session IR, parsers, discovery, and process matching for local AI coding-agent transcripts."
license = "MIT"
repository = "https://github.com/eunomia-bpf/agentsight"
homepage = "https://github.com/eunomia-bpf/agentsight/tree/master/agent-session"
documentation = "https://docs.rs/agent-session"
readme = "README.md"
keywords = ["ai-agent", "codex", "claude", "gemini", "transcript"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
chrono = "0.4"
dirs = "6"
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
