[package]
name = "agentsight"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3"
hex = "0.4"
hpack = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
dirs = "6"
chunked_transfer = "1.5"
num_cpus = "1.16"
rusqlite = { version = "0.32", features = ["bundled"] }

# Web server dependencies
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rust-embed = { version = "8.7", features = ["debug-embed", "compression", "include-exclude"] }
mime_guess = "2.0"
